# ML_OPS

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh  setup.py
.github/workflows/: tests.yaml
configs/: data.yaml  model.yaml  preprocess.yaml
deploy/: api.py
logger/: logger.py
ml_flow/: mlflow.py  model_variants.py
model/: model.py
notebooks/: data_report.ipynb  preprocess.ipynb
src/: main.py
src/data/: loaders.py  preprocess.py
src/ml_flow/: ml_flow.py
src/models/: evaluate.py  model_builder.py  persistence.py  train.py
src/utils/: config.py
streamlit/: app.py
tests/: preprocess.py  test_preprocess.py  test_tmp.py
